# hare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conan_build.bat  conanfile.txt
.github/workflows/: cmake-single-platform.yml
.gitverse/workflows/: cmake-single-platform.yaml  cpp.yaml
example/: CMakeLists.txt
example/shared_library_example/: CMakeLists.txt
example/shared_library_example/include/shared_library_example/: worker.h
example/shared_library_example/include/shared_library_example/details/: exports.h
example/shared_library_example/src/: worker.cpp
example/shared_library_example/src/details/: hare_defs.h
example/src/: console.cpp
example/src/details/: hare_defs.h
example/static_library_example/: CMakeLists.txt
example/static_library_example/include/static_library_example/: worker.h
example/static_library_example/src/: worker.cpp
example/static_library_example/src/details/: hare_defs.h
include/hare/: config.h  config_custom.h  config_default.h  defs.h  hare.hpp  hare_loggers.h  hlevels.h  hlog.hpp  hlogger.h  htypes.h  sinks_info.h
include/hare/details/: auto_flusher.h  auto_measure.h  auto_tracer.h  autoinit.h  autolog.h  config_default.h  defs.h
src/: config.cpp  config_custom.cpp  config_default.cpp  hare.cpp  hare_loggers.cpp  hlog.cpp  hlogger.cpp  logger_fabric.cpp  logger_fabric.h  pch.h
src/configuration/: config.cpp  config.h
src/details/: auto_flusher.cpp  auto_measure.cpp  auto_tracer.cpp  autoinit.cpp  autolog.cpp  config_default.cpp  config_defaults_base.cpp  config_defaults_base.h  config_defaults_spdlog.h
src/example/: CMakeLists.txt  console.cpp
src/example/sub_example_a/: CMakeLists.txt  Worker.cpp
src/example/sub_example_so/: CMakeLists.txt  Worker.cpp  Worker.h
src/logging/: CMakeLists.txt  DiagnosticLevels.h  DiagnosticStaticInitialization.h  Diagnostics.cpp  Diagnostics.h  hare.cpp  hare.h  hare.hpp  hare_templates.cc
src/logging/auto_trace/: AutoTracer.cpp  AutoTracer.h
src/logging/autolog/: AutoTracer.cpp  AutoTracer.h
src/logging/configuration/: DiagnosticLevels.h  config.cpp  config.h  default_config.h
src/logging/hare/: hare.cpp  hare.h  hare.hpp  logger.cpp  logger.h
src/logging/initialization/: DiagnosticStaticInitialization.cpp  DiagnosticStaticInitialization.h  Diagnostics.cpp  Diagnostics.h  StaticInitialization.h
src/memory_tracer/: CMakeLists.txt  MemoryTracer.cpp  MemoryTracer.h
src/sub_example_a/: CMakeLists.txt  Worker.cpp  Worker.h
src/sub_example_so/: CMakeLists.txt  Worker.cpp  Worker.h
tests/: CMakeLists.txt  TestRunAll.cpp
tests/logging/: multi_arg.cpp
tests/memory_tracer/: memory_tracer.cpp
